--- a/spring组件属性赋值和自动装配_5/pom.xml
+++ b/spring组件属性赋值和自动装配_5/pom.xml
@@ -15,6 +15,11 @@
             <version>4.3.12.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
